IDB: storage/indexeddb/mozilla/index-prev-no-duplicate.html fails <rdar://problem/16018918> and https://bugs.webkit.org/show_bug.cgi?id=128444

Reviewed by Dan Bernstein.

Source/WebKit2:

* DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:
(WebKit::getIndexStatement): Return different statements for unique cursors that will
  sort the values in reverse of the cursor direction, matching expected IndexedDB behavior.
(WebKit::SQLiteIDBCursor::establishStatement):

* DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp:
(WebKit::UniqueIDBDatabaseBackingStoreSQLite::uncheckedPutIndexRecord): Insert the values as
  strings since we need the collation function to be called for proper sorting.

LayoutTests:

* platform/mac-wk2/TestExpectations: Enable the test.

Canonical link: https://commits.webkit.org/146509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163741 268f45cc-cd09-0410-ab3c-d52691b4dbfc